# ArcFlagsSIMD

./: CMakeLists.txt  README.md  compile.sh  main.cpp
datastructures/: dijkstra.h  graph.h  radix_heap.h  simd_dijkstra.h
helpers/: binary_heap.h  binary_search.h  cmdparser.hpp  csv.h  generation_checker.h  priority_queue.h  statistics_collecter.h  status_log.h  timer.h  types.h  utils.h
